--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -389,7 +389,7 @@ margin-top: 100px;
   }
 .third_img{
   width: 100%;
-  margin-top: 46px;
+  /*margin-top: 46px;*/
 }
 .line_yellow{
   background-color: #f19000;
