--- a/ui/website/src/allBlocks/ChallengesTemp/ChallengesTemp.css
+++ b/ui/website/src/allBlocks/ChallengesTemp/ChallengesTemp.css
@@ -1,5 +1,5 @@
 .innerBlocktepmlate4{
-	height: 570px;
+	height: 640px;
 }
 .B3T_challengesDiv {
     top: 130px;
@@ -8,6 +8,7 @@
     box-shadow: 3px 6px 4px 2px #eee;
     margin-left: 100px;
     margin-bottom: 40px;
+    min-height: 260px;
 }
 .B4T_img{
 	margin-left: 77px;
