--- a/ui/website/src/allBlocks/News_Events/News_Events.css
+++ b/ui/website/src/allBlocks/News_Events/News_Events.css
@@ -2,11 +2,11 @@
 	height: 570px;
 }
 .B3T_NewsDiv {
-    top: 130px;
+    /*top: 130px;*/
     height: 190px;
     /*width: 303px;*/
     box-shadow: 3px 6px 4px 2px #eee;
-    /*margin-left: 100px;*/
+    margin-right: 20px;
     margin-bottom: 40px;
 }
 .news_img{
@@ -33,4 +33,22 @@
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
+}
+.yearbox{
+    box-shadow: -3px 1px 6px 5px #f3f3f3;
+    width: 63px;
+    height: 47px;
+    margin-right: 15px;
+
+    color:#009de2;
+}
+.maindivNews{
+  margin-top: 25px;
+}
+.newsheading{
+  font-weight: 700;
+  color:#009de2;
+}
+.Newsbannerimg{
+  height: 180px;
 }
