karuna added changes

--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -1,5 +1,5 @@
-.innerBlocktepmlate4{
-	height: 570px;
+.innerBlocktepmlate6{
+	height: auto;
 }
 .B3T_NewsDiv {
     /*top: 130px;*/
@@ -51,5 +51,5 @@
   color:#009de2;
 }
 .Newsbannerimg{
-  height: 180px;
+  height: 200px;
 }
