--- a/ui/website/src/allBlocks/ExpertiseTemplateBanner/ExpertiseTemplateBanner.css
+++ b/ui/website/src/allBlocks/ExpertiseTemplateBanner/ExpertiseTemplateBanner.css
@@ -22,7 +22,7 @@
   	font-size: 43px;
     font-weight: 600;
     /*margin-top: 120px;*/
-    left: 462px;
+    /*left: 462px;*/
     top: 190px;
   }
 
