--- a/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
+++ b/ui/website/src/allBlocks/ServicesOffered/ServicesOffered.css
@@ -4,7 +4,7 @@
  .B4T_ServicesDiv{
     /*top: 135px;*/
     box-shadow: 0px 0px 3px 0px #eee;
-    margin-left: 76px;
+    /*margin-left: 76px;*/
     margin-bottom: 20px;
     min-height: 150px;
   }
