karuna added changes

--- a/ui/admin/src/CMS/component/blockTemplate/Aboutufounder/Aboutufounder.css
+++ b/ui/admin/src/CMS/component/blockTemplate/Aboutufounder/Aboutufounder.css
@@ -4,6 +4,6 @@
     margin-left: -24px;
     width: 310px ! important;
 }
-.foundertext{
-	font-size: 15px ! important;
+.foundertext h3{
+	font-size: 20px ! important;
 }
