--- a/ui/admin/src/CMS/component/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/admin/src/CMS/component/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -372,4 +372,9 @@
 .downstreamtxt{
   padding-top: 46px;
 }
-
+.para-top_website{
+    margin-top: 55px;
+    margin-bottom: 10px;
+    font-size: 50px;
+    font-weight: 700;
+}
