--- a/ui/website/src/allBlocks/News_Events/News_Events.css
+++ b/ui/website/src/allBlocks/News_Events/News_Events.css
@@ -1,5 +1,5 @@
 .innerBlocktepmlate4{
-	height: 570px;
+	height: auto;
 }
 .B3T_NewsDiv {
     /*top: 130px;*/
@@ -27,9 +27,9 @@
   	z-index: 999	
 }
 .B2T_challengesTitle{
-	top: 53px;
+	/*top: 53px;
     left: 563px;
-    position: absolute;
+    position: absolute;*/
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
