Ashish added changes in admin

--- a/ui/admin/src/CMS/component/ListOfPages/ListOfPages.css
+++ b/ui/admin/src/CMS/component/ListOfPages/ListOfPages.css
@@ -13,3 +13,11 @@
 	color: #f00;
 	cursor: pointer;
 }
+.CNPBtn{
+	position: relative;
+	top: -8px;
+	margin: 0px !important;
+}
+.CNPBtn .btn{
+	margin: 0px !important;
+}
