--- a/ui/admin/src/CMS/component/blockTemplate/TitleRrpeatedImgGrp/TitleRrpeatedImgGrp.css
+++ b/ui/admin/src/CMS/component/blockTemplate/TitleRrpeatedImgGrp/TitleRrpeatedImgGrp.css
@@ -4,6 +4,10 @@
 .ocTitle{
 	
 }
+.fgImageSize{
+  height: 350px !important;
+  width: 100% !important;
+}
 .newocTitle{
     color: #376bff;
     line-height: 1.5;
