--- a/ui/admin/src/CMS/component/blockTemplate/Aboutusvision/Aboutusvision.css
+++ b/ui/admin/src/CMS/component/blockTemplate/Aboutusvision/Aboutusvision.css
@@ -1,3 +1,35 @@
 .breadcrumb>li+li:before{
 	
 }
+.plane {
+    width: 91%;
+    margin-left: 49px;
+    margin-top: 147px;
+}
+
+.blck1height, .blck1height1 {
+    height: 196px;
+    margin-top: 86px;
+    border-radius: 10px;
+}
+.blck1height {
+    top: 137px;
+    width: 427px;
+    margin-left: 161px;
+}
+.blck, .blck1 {
+    border-radius: 4px;
+    box-shadow: 0 10px 29px rgba(92,141,255,.22);
+    margin: 10px;
+}
+.blck {
+    padding: 32px 40px 56px;
+}
+.b1width, .b2width {
+    margin-left: 211px;
+    padding-top: 0;
+}
+.b1width {
+    width: 377px;
+    height: 163px;
+}
