karuna added changes

--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -10,6 +10,9 @@
 .righttextaboutus{
 	margin-top: 90px;
 }
+.energypagedata{
+	font-size: 20px;
+}
 /*.onselecthover:hover{
   cursor: pointer;
   border: 1px solid #aaa;
