--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -154,7 +154,7 @@
 .para-top{
     margin-top: 15px;
     margin-bottom: 10px;
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 700;
 }
 .respara-top{
@@ -384,8 +384,8 @@ margin-top: 100px;
 
 /*****************************************************************************************/
 .intro_img{
-    width: 100%;
-    margin-top: 50px;
+    /*width: 100%;
+    margin-top: 50px;*/
   }
 .third_img{
   width: 100%;
