--- a/ui/website/src/allPages/ContactPage/Contactpage.css
+++ b/ui/website/src/allPages/ContactPage/Contactpage.css
@@ -12,7 +12,7 @@
   /*background-image: url("/images/contactusbg.png");*/
   background-size: 100% 100%;
   /*height: 800px;*/
-  background-color: #e8eaf6;
+  background-color: #ffffff;
 }
 .contactcontent{
 margin-bottom: 50px;
