--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -39,6 +39,7 @@
     box-shadow: -3px 1px 6px 5px #f3f3f3;
     width: 63px;
     height: 47px;
+    padding-top: 3px;
     /*margin-right: 15px;*/
 
     color:#009de2;
@@ -53,4 +54,7 @@
 }
 .Newsbannerimg{
   height: 200px;
+}
+.eventdesc{
+  padding-top: 20px;
 }
