--- a/ui/website/src/blockTemplate/TitleDescription/TitleDescription.css
+++ b/ui/website/src/blockTemplate/TitleDescription/TitleDescription.css
@@ -7,6 +7,10 @@
   
 
 }
+ .new-para-top{
+ 	font-size: 35px ! important;
+
+ }
 /*.onselecthover:hover{
   cursor: pointer;
   border: 1px solid #aaa;
