--- a/ui/website/src/allBlocks/Upstream/Upstream.css
+++ b/ui/website/src/allBlocks/Upstream/Upstream.css
@@ -174,6 +174,11 @@
 
 
 }
+.upstreamblock_new{
+  height: auto;
+    padding: 60px 100px;
+  margin-bottom:60px;
+}
 
 .owl-theme .owl-nav{
   /*background-color: red;*/
