--- a/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/allBlocks/ConsultingServices/ConsultingServices.css
@@ -7,7 +7,7 @@
 .BT3_dataDiv{
 	top:25px;
 	/*width: 277px;*/
-	margin-left: 82px;
+	/*margin-left: 82px;*/
 	margin-bottom: 20px;
   min-height: 240px;
 
