karuna added changes

--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -133,3 +133,13 @@
     bottom:14px;
 
 }
+.navigationTitle_for2{
+    color: #ffffff;
+    position: absolute; 
+    top: -12px;
+    left: 351px;
+    font-weight: 600;
+    font-size: 23px;
+    bottom:14px;
+
+}
