--- a/ui/website/src/MasterPage/MasterPage.css
+++ b/ui/website/src/MasterPage/MasterPage.css
@@ -1,7 +1,7 @@
 .pageHgt{
 	/*min-height: 1875px !important;*/
 	width: 100%;
-	background-color: #f1f1f1;
+	/*background-color: #f1f1f1;*/
 }
 .heightblock{
 	height: 650px;
