--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -25,5 +25,8 @@
     color: #009de2;
     font-size: 35px;
     font-weight: 600;
-    margin-top: 75px;
+    margin-top: 55px;
+}
+.services_block{
+  margin-top: 30px;
 }
