karuna added changes

--- a/ui/website/src/common/Footer/Footer.css
+++ b/ui/website/src/common/Footer/Footer.css
@@ -396,3 +396,16 @@ ul.no-icon-list {
 .resmr20{
   /*font-size: 11px ! important;*/
 }
+.footerdivs{
+  width: 160px;
+}
+.footermailicon{
+  font-size: 9px;
+  padding-right: 5px;
+}
+.pb351{
+  margin-left: 55px;
+}
+.footerdiv1{
+  width:140px;
+}
