--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -344,7 +344,7 @@ margin-top: 100px;
   width: 90px;
   height: 4px;
   margin-top: 40px;
-  margin-left: 60px;
+  /*margin-left: 60px;*/
 }
 
 .line2{
