--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -22,6 +22,16 @@
     right: 15px;
     color: #ffffff;
  }
+ .new_wizardNote_for6
+ {
+    /* border: 1px solid; */
+    text-align: center;
+    margin-right: 0px;
+    position: relative;
+    top: 35px;
+    right: 36px;
+    color: #ffffff;
+ }
  .new_wizard{
     height: 160px;
     color: #fff;
@@ -76,6 +86,7 @@
 }
 .navigation_tab_for6{
     width: 215px;
+    margin-top: 42px;
 }
 #new_wizardNote_new0{
     width: 147px;
