karuna added changes

--- a/ui/website/src/blockTemplate/Careerimpact/Careerimpact.css
+++ b/ui/website/src/blockTemplate/Careerimpact/Careerimpact.css
@@ -15,7 +15,7 @@
 .career_para-top2{
   font-size: 40px;
    /* font-weight: 100;*/
-   color: #1378d4;
+   color: #009de2;
     padding-left: 22px;
     
 }
@@ -27,8 +27,8 @@
   margin-top: 28px;
 }
 .career2_img{
-  width: 95%;
-    margin-top: 206px;
+    width: 95%;
+    margin-top: 80px;
     padding-left: 66px;
     height: 434px;
 }
