--- a/ui/website/src/allBlocks/AllBlogsBanner/AllBlogsBanner.css
+++ b/ui/website/src/allBlocks/AllBlogsBanner/AllBlogsBanner.css
@@ -9,11 +9,14 @@
     background-size: 100% 100%;
 
 }
+.AllBlogsbannerWall img{
+  margin-top: 30px;
+}
 .nopadding{
   padding: 0px;
 }
 .AllBlogscentered {
-  background-color: #191818ba;
+  background-color: #f3e8e8ba;
   padding: 0px !important;
   height: 435px;
   text-align:center !important;
@@ -30,6 +33,7 @@
 .fs72{
   font-weight: 600;
   font-size: 72px;
+  color: #333;
 }
 .fs24{
   font-size: 22px;
