--- a/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
@@ -11,7 +11,7 @@
 .downimgtext{
 	position: absolute;
     top: 5em;
-    left: 13em;
+    left: 16em;
     color: #009de2;
     font-weight: 600;
 }
@@ -25,9 +25,10 @@
 .downimg_p_txt{
 	  position: absolute;
     top: 12.5em;
-    left: 13em;
-    text-align: justify; 
-    font-size: 20px
+    left: 9em;
+    /*text-align: justify; */
+    font-size: 20px;
+    padding-right:135px;
 }
 .downimg_p_txt_res{
     /*position: absolute;
