--- a/ui/website/src/allPages/ResourcePage/ResourcePage.css
+++ b/ui/website/src/allPages/ResourcePage/ResourcePage.css
@@ -6,7 +6,7 @@ body{
   /*overflow-x: hidden;*/
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Raleway', sans-serif;
+	font-family:'Open Sans', sans-serif
 }
 
 .resourcebg1{
