--- a/ui/website/src/allPages/ServicesPage/ServicesPage.css
+++ b/ui/website/src/allPages/ServicesPage/ServicesPage.css
@@ -6,7 +6,8 @@ body{
   /*overflow-x: hidden;*/
 }
 div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Open Sans', sans-serif;
+	color:#000;
 }
 
 .servicebg1{
