--- a/ui/website/src/blockTemplate/Typecomponent3/Typecomponent3.css
+++ b/ui/website/src/blockTemplate/Typecomponent3/Typecomponent3.css
@@ -44,8 +44,8 @@
 }
 .type3text{
     margin-top: 40px;
-    font-size: 19px;
+    font-size: 17px;
 }
 .righttextaboutus{
-    font-size: 19px;
+    font-size: 17px ! important;
 }
