--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -85,10 +85,10 @@
     width: 100%;
 }
 .navigation_tab{
-    width: 143px;
+    width: 128px;
 }
 .navigation_tab_for6{
-    width: 215px;
+    width: 165px;
     margin-top: 42px;
 }
 #new_wizardNote_new0{
@@ -162,7 +162,7 @@
 {   
     font-size: 23px;
     font-weight: 600;
-    left: 595px;
-    bottom: 14px;
+   left: 506px;
+    top: 24px;
     position: absolute;
 }
