--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -379,3 +379,10 @@
     font-size: 30px;
     font-weight: 700;
 }
+.line4{
+   background-color: #f08f00;
+    width: 90px;
+    height: 4px;
+    margin-top: 40px;
+    margin-left: 28px;
+}
