--- a/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
@@ -4,3 +4,9 @@
     font-size: 30px;
     font-weight: 700;
 }
+.line2{
+	background-color: #f08f00;
+    width: 90px;
+    height: 4px;
+    margin-top: 40px;
+}
