--- a/ui/website/src/allPages/AboutUs/AboutUs.css
+++ b/ui/website/src/allPages/AboutUs/AboutUs.css
@@ -281,8 +281,8 @@ margin-top: 100px;
     letter-spacing: 1px;
 }
 .para-top3{
-  font-size: 50px;
-  margin-top: 160px;
+  font-size: 31px;
+  /*margin-top: 160px;*/
 }
 
 .alg_lft{
@@ -344,7 +344,7 @@ margin-top: 100px;
   width: 90px;
   height: 4px;
   margin-top: 40px;
-  /*margin-left: 60px;*/
+  margin-left: 49px;
 }
 
 .line2{
@@ -414,7 +414,7 @@ margin-top: 100px;
 .director_img{
   width: 100%;
   /* margin-left: 171px; */
-  margin-top: 235px;
+  /*margin-top: 235px;*/
   border: 9px solid #fff;
   box-shadow: 0 10px 29px rgba(92,141,255,0.5);
 }
@@ -495,8 +495,14 @@ margin-top: 100px;
 .backgrd_curve1{
   background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
-  height: 780px;
- /* height: 352px;*/
+  /*height: auto;*/
+  height: 580px;
+}
+.backgrd_curve1_mob{
+  background-image: url("/images/Founder-Profiles.png");
+  background-size: 100% 100%;
+  /*height: auto;*/
+  height: 1000px;
 }
 
 
@@ -511,7 +517,8 @@ margin-top: 100px;
     font-size: 14px;
 }
 .servicekbtnarrow{
-   /* color: #fff;*/
+    color: #fff;
     font-weight: 600;
     font-size: 18px;
+    margin-left: 10px;
 }
