--- a/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
+++ b/ui/website/src/blockTemplate/DescBgImage/DescBgImage.css
@@ -447,7 +447,7 @@ margin-top: 100px;
 .backgrd_curve1{
   background-image: url("/images/Founder-Profiles.png");
   background-size: 100% 100%;
-  height: 780px;
+  height: auto;
  /* height: 352px;*/
 }
 
@@ -463,7 +463,8 @@ margin-top: 100px;
     font-size: 14px;
 }
 .servicekbtnarrow{
-   /* color: #fff;*/
+    color: #fff;
     font-weight: 600;
     font-size: 18px;
+    padding-left: 10px;
 }
