--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -7,6 +7,13 @@
   
 
 }
+.line3{
+	background-color: #f08f00;
+    width: 90px;
+    height: 4px;
+    margin-top: 40px;
+    margin-left: 32px;
+}
 .righttextaboutus{
 	margin-top: 25px;
 	font-size: 17px ! important;
