Karuna added changes

--- a/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/allBlocks/ConsultDownstream/ConsultDownstream.css
@@ -97,13 +97,13 @@
     width: 400px;
     text-align: left;
 }
-#consultdown_data7{
+/*#consultdown_data7{
 	position: absolute;
     top: 91em;
     right:71em;
     width: 400px;
     text-align: right;
-}
+}*/
 #downimg_text0,#downimg_text4,#downimg_text6{
 	font-weight: 600;
 
