--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -5,7 +5,7 @@
   margin-top: 70px;
 }
 .innerBlocktConsult_new{
-  height: 1700px;
+  /*height: 1700px;*/
   /*background-image: url("/images/consultdown.png");*/
   background-size: 100% 100%;
 }
@@ -43,14 +43,14 @@
 #consultdown_data0{
    position: absolute;
    top: 29em;
-   left: 54em;
+   left: 57%;
    width: 294px;
 
 }
 #consultdown_data1{
    position: absolute;
    top: 36em;
-   right:52em;
+   right:52%;
    width: 294px;
    text-align: right;
 
@@ -58,7 +58,7 @@
 #consultdown_data2{
     position: absolute;
     top: 47em;
-    left: 54em;
+    left: 54%;
     width: 294px;
     text-align: left;
 
@@ -66,7 +66,7 @@
 #consultdown_data3{
     position: absolute;
     top: 56em;
-    right:52em;
+    right:52%;
     width: 294px;
     text-align: right;
 
@@ -74,7 +74,7 @@
 #consultdown_data4{
 	 position: absolute;
     top: 66em;
-    left: 54em;
+    left: 54%;
     width: 294px;
     text-align: left;
 
@@ -82,21 +82,21 @@
 #consultdown_data5{
 	position: absolute;
     top: 74em;
-    right:52em;
+    right:52%;
     width: 294px;
     text-align: right;
 }
 #consultdown_data6{
 	position: absolute;
     top: 83em;
-    left: 54em;
+    left: 54%;
     width: 294px;
     text-align: left;
 }
 #consultdown_data7{
 	position: absolute;
     top: 91em;
-    right:72em;
+    right:73%;
     width: 294px;
     text-align: right;
 }
@@ -158,7 +158,7 @@
 #consultdown_data7{
   position: absolute;
     top: 91em;
-    right:72em;
+    right:73%;
     width: 294px;
     text-align: right;
 }
