--- a/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
@@ -21,11 +21,9 @@
 	font-weight: 600;
 	margin-left: 18px;
 }
-.BT3_img{
-    margin-left: 77px;
-    position: absolute;
-    top: 9px;
-    right: 115px;
+.BT3_img1{
+    margin-top: 9px;
+    margin-left: 9px
 }
 .BT4_txt {
     margin-top: 17px;
