--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -146,7 +146,7 @@ body{
     text-align: center;
     background-color: #fff;
     /*padding: 30px 0;*/
-    height: 375px;
+    height: 407px;
 }
 .price {
     margin-top: 10px;
@@ -459,6 +459,7 @@ body{
     line-height: 25px;
 }
 .price-footer{
+    margin-top: 10px;
     /*position: absolute;*/
     /*cursor: pointer !important;*/
 
