karuna added changes

--- a/ui/website/src/allBlocks/Commonchallengesblock/Commonchallengesblock.css
+++ b/ui/website/src/allBlocks/Commonchallengesblock/Commonchallengesblock.css
@@ -1,11 +1,11 @@
 .challenges_line_paraaaa{
     line-height: 30px;
-    font-size: 19px;
+    font-size: 17px;
     color: #7b6f6f;
 }
 .challenges_line_paraaaa1{
     line-height: 30px;
-    font-size: 19px;
+    font-size: 17px;
     color: #7b6f6f;
 }
 .challenges_line_subheadd{
@@ -29,7 +29,7 @@
 
   .challenges_line_paraaaa2{
     line-height: 30px;
-    font-size: 19px;
-    color: #7b6f6f;
+    font-size: 17px;
+    /*color: #7b6f6f;*/
     margin-left: 15px;
 }
