--- a/ui/website/src/allBlocks/Challenges/Challenges.css
+++ b/ui/website/src/allBlocks/Challenges/Challenges.css
@@ -24,6 +24,6 @@
   .challenges_line_paraaaa2{
     line-height: 30px;
     font-size: 19px;
-    color: #7b6f6f;
+    /*color: #7b6f6f;*/
     /*margin-left: 15px;*/
 }
