--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -395,7 +395,7 @@ dropdown-submenu {
   margin-top: 14px;
 }
 .navbar a {
-    float: left;
+    /*float: left;*/
     display: block;
     padding: 0 7px;
     color: #000;
@@ -409,7 +409,7 @@ dropdown-submenu {
 .dropdown {
   float: left;
   overflow: hidden;
-  width: 127px;
+  /*width: 127px;*/
   /*margin-top:12px; */
 }
 
@@ -467,7 +467,7 @@ dropdown-submenu {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   padding-top: 20px;
-  margin-top: 35px;
+  margin-top: 10px;
   border-radius: 5px;
   border-top: 3px solid #aaf;
 }
@@ -582,7 +582,7 @@ dropdown-submenu {
 
 }
 .servicedropdown1{
-  width: 168px;
+  width: 140px;
   height: 179px;
   margin-left: 497px;
 
@@ -612,8 +612,12 @@ dropdown-submenu {
   width: 150px;
   border-radius: 5px;
   border-top: 3px solid #66f;
-  margin-top: 23px;
-  margin-left: 723px;
+  margin-top: 0px;
+  margin-left: 677px;
+}
+.servicedropdown2_pos{
+  padding-bottom: 20px;
+
 }
 .Servicecolumn{
   width:150px;
@@ -656,7 +660,7 @@ dropdown-submenu {
   /*margin-top: 12px;*/
   float: left;
   overflow: hidden;
-  width: 108px;
+  /*width: 108px;*/
 }
 .columnhealth{
   width: 11%;
