Karuna addedd changes in industries page

--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -18,6 +18,9 @@
 	margin-top: 25px;
 	font-size: 17px ! important;
 }
+.industries_imgDiv{
+  margin-top: 75px;
+}
 /*.onselecthover:hover{
   cursor: pointer;
   border: 1px solid #aaa;
