--- a/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
@@ -8,5 +8,9 @@
 	background-color: #f08f00;
     width: 90px;
     height: 4px;
-    margin-top: 40px;
+    margin-bottom: 10px;
+    /*margin-top: 40px;*/
+}
+.typebtn_img{
+	padding-top: 44px;
 }
