--- a/ui/website/src/blockTemplate/TitleRepeatGrp/TitleRepeatGrp.css
+++ b/ui/website/src/blockTemplate/TitleRepeatGrp/TitleRepeatGrp.css
@@ -20,7 +20,7 @@
 
 .BT3_subhead{
 	font-weight: 600;
-	margin-left: 18px;
+	/*margin-left: 18px;*/
 }
 .BT3_img{
     margin-left: 77px;
@@ -30,7 +30,7 @@
 }
 .BT4_txt {
     margin-top: 17px;
-    margin-left: 54px;
+    /*margin-left: 54px;*/
     font-size: 15px;
     height: auto;
     font-size: 15px;
