--- a/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
+++ b/ui/website/src/blockTemplate/ConsultingServices/ConsultingServices.css
@@ -18,16 +18,17 @@
 }
 
 .BT3_subhead{
+  margin-top: 20px;
 	font-weight: 600;
-	margin-left: 18px;
+	/*margin-left: 18px;*/
 }
 .BT3_img1{
     margin-top: 9px;
     margin-left: 9px
 }
 .BT4_txt {
-    margin-top: 17px;
-    margin-left: 54px;
+    margin-top: 10px;
+    /*margin-left: 54px;*/
     font-size: 15px;
     height: auto;
     font-size: 15px;
